2003-12-16  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* added support for i18n in the backends
	* gettext.pl.in: removed, hacky as hell
	* Makefile.am, configure.in: added i18n rules
	* general.pl.in: removed reference to gettext.pl.in, added i18n code
	* hardware-conf.in, package-conf.in, xml.pl.in: made the XML to be
	  UTF-8
	* report.pl.in: removed reference to gettext.pl.in
	* service.pl.in, service-list.pl.in: marked a bunch of strings as
	  translatable
	* po/POTFILES.in, POTFILES.skip: added
	* fixes bug #108519

2003-12-10  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* replace.pl.in: made it to delete in the files all known variables 
	  that are no longer existing in the XML

2003-12-09  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.30.0

2003-11-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* replace.pl.in: made it to delete the "auto" stanzas from the debian
	  network config file. fixes bug #126930

2003-11-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-conf.in: made it to mount the /boot partition before getting
	  or setting the data. fixes bug #125199

2003-11-22  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in, network-conf.in, platform.pl.in, service.pl.in, 
	  services-conf.in, time-conf.in, users-conf.in: s/woody/3\.0/
	* time-conf.in: made it to use gst_service_list_sysv_any_installed ()
	  when the distro is debian woody

2003-11-22  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* services.pl.in: (gst_service_sysv_list_any_installed): added, this
	  checks that any service inside a list exists in init.d

2003-10-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in: fixed the ntpd server for debian, it was "ntp-simple",
	  not "ntpd"
	* network.pl.in, time-conf.in: fixed ntp and smbd servers
	  activation/deactivation

2003-10-26  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: fixed XML generation when iwconfig is missing
